--- a/teste.html
+++ b/teste.html
@@ -48,6 +48,21 @@ O HTML é uma linguagem de formatação. Não é uma linguagem
     <li>item 3</li>
 </ol>
 
+<h4>Tabela</h4>
+
+<!--Tabela-->
+
+<table border="1px" align="center" width="60%">
+    <tr>
+        <td>Verde</td>
+        <td>Azul</td>
+    </tr>
+    <tr>
+        <td>Amarelo</td>
+        <td>Roxo</td>
+    </tr>
+
+</table>
 
 
     </body>
