--- a/teste.html
+++ b/teste.html
@@ -61,9 +61,15 @@ O HTML é uma linguagem de formatação. Não é uma linguagem
         <td>Amarelo</td>
         <td>Roxo</td>
     </tr>
-
 </table>
 
+<!--Tabela-->
+
+<b>NEGRITO</b></br>
+<i>italico</i></br>
+<u>sublinhado</u></br>
+<s>riscado</s></br>
+<b><i><u>tudo junto</u></i></b></br>
 
     </body>
 </html>
