--- a/teste.html
+++ b/teste.html
@@ -10,9 +10,11 @@ O HTML é uma linguagem de formatação. Não é uma linguagem
         <meta name ="description" content="Essa é uma pagina que diz o quanto eu estou linda"/>
         <meta name ="keywords" content="html 5, programação web, bibi"/>
     </head>
-    <body text="blue">
+    <body>
         <center><h1>Tudo sobre a Bibi</h1></center>
         <center><h2> A bibi é muito linda!</h2></center>
+
+        <font color="#FF00FF" size="small" face="arial"> 
 
 <h3>MODO DE PREPARO</h3>
 
@@ -30,6 +32,9 @@ O HTML é uma linguagem de formatação. Não é uma linguagem
 
 <div> define uma divisao na pagina</div>
 
+</font>
+
+<font color="#BA55D3" size="small" face="arial"> 
 <h4>Listas</h4>
 
 <!--lista de topicos -->
@@ -48,6 +53,9 @@ O HTML é uma linguagem de formatação. Não é uma linguagem
     <li>item 3</li>
 </ol>
 
+</font>
+
+<font color="#FF1493" size="small" face="arial"> 
 <h4>Tabela</h4>
 
 <!--Tabela-->
@@ -63,13 +71,34 @@ O HTML é uma linguagem de formatação. Não é uma linguagem
     </tr>
 </table>
 
-<!--Tabela-->
+</font>
 
+<!--Design de textos-->
+<font color="#FF69B4" size="small" face="arial"> 
 <b>NEGRITO</b></br>
 <i>italico</i></br>
 <u>sublinhado</u></br>
 <s>riscado</s></br>
 <b><i><u>tudo junto</u></i></b></br>
+</font>
+
+<!--Fonte-->
+<br>
+<font color="#FF00FF" size="30px" face="arial" >Tudo sobre mim!
+</font>
+</br>
+</br>
+
+
+<h4> SITE DAS CORES </h4>
+<a href="https://www.homehost.com.br/blog/tutoriais/tabela-de-cores-html/" target="new">
+    CLIQUE AQUI!
+</a></br>
+
+
+<h4> IMAGEM </h4>
+<img src="sailor.jpg" width="20%" />
+
 
     </body>
 </html>
