--- a/teste.html
+++ b/teste.html
@@ -11,8 +11,9 @@ O HTML é uma linguagem de formatação. Não é uma linguagem
         <meta name ="keywords" content="html 5, programação web, bibi"/>
     </head>
     <body>
-        <center><h1>Tudo sobre a Bibi</h1></center>
-        <center><h2> A bibi é muito linda!</h2></center>
+        <font color="#FF00FF" size="30px" face="arial" >
+        <center><h2> site da bibi </h2></center>
+    </font>
 
         <font color="#FF00FF" size="small" face="arial"> 
 
@@ -60,7 +61,7 @@ O HTML é uma linguagem de formatação. Não é uma linguagem
 
 <!--Tabela-->
 
-<table border="1px" align="center" width="60%">
+<table border="1px" width="20%">
     <tr>
         <td>Verde</td>
         <td>Azul</td>
@@ -69,12 +70,17 @@ O HTML é uma linguagem de formatação. Não é uma linguagem
         <td>Amarelo</td>
         <td>Roxo</td>
     </tr>
-</table>
+</table></br>
 
 </font>
 
-<!--Design de textos-->
+
 <font color="#FF69B4" size="small" face="arial"> 
+
+<!--Design de textos-->
+
+<h4>Design de textos</h4>
+
 <b>NEGRITO</b></br>
 <i>italico</i></br>
 <u>sublinhado</u></br>
@@ -84,9 +90,7 @@ O HTML é uma linguagem de formatação. Não é uma linguagem
 
 <!--Fonte-->
 <br>
-<font color="#FF00FF" size="30px" face="arial" >Tudo sobre mim!
-</font>
-</br>
+
 </br>
 
 
