--- a/aula2508.html
+++ b/aula2508.html
@@ -10,6 +10,7 @@
         <h2> Pw - tags de objeto </h2>
     </font>
 
+     <!--formas de fazer formulários-->
             <form>
             <!--De A a Z no minimo 6 caracteres e maxima de 100 caracteres-->
                 nome: <input type="text" 
