--- a/aula2508.html
+++ b/aula2508.html
@@ -51,6 +51,13 @@
                 <input type="radio" id="p1" name="periodo"> Manhã
                 <input type="radio" id="p2" name="periodo"> Tarde
                 <input type="radio" id="p3" name="periodo"> Noite
+
+                <br>
+                <br>
+                <br>
+                mensagem:
+                <textarea id="msg" placeholder="digite uma mensagem" required rows="5" cols="40"></textarea> 
+
             <br>
             <button> enviar </button>
 
