--- a/aula2508.html
+++ b/aula2508.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Pagina Bibi</title>
+        <title>Biblioteca de objetos da bibi</title>
         <meta name ="description" content="Essa é uma pagina que diz o quanto eu estou linda"/>
         <meta name ="keywords" content="html 5, programação web, bibi"/>
     </head>
@@ -57,7 +57,22 @@
                 <br>
                 mensagem:
                 <textarea id="msg" placeholder="digite uma mensagem" required rows="5" cols="40"></textarea> 
-
+                <br>
+                <br>    
+                unidade: 
+                <select id="unidade">
+                    <option>SC</option>
+    <!--pré selecionado-->
+                    <option selected>SP</option>
+                    <option>RJ</option>
+                    <option>RS</option>
+                </select>
+                <br>
+                <br>
+                <input type="text" id="endereco" 
+                data-variavel="123"
+                data-variavel="dhudh" />
+                <br>
             <br>
             <button> enviar </button>
 
