--- a/pw03.html
+++ b/pw03.html
@@ -39,10 +39,10 @@
                 <br>
                 <br>
        telefone: <input type="tel" 
-                id="telefone" 
+                id="telefone"
+                pattern="[0-9]{4,5}-[0-9]{4}" 
                 size="32"
-                required 
-                placeholder="(xx) xxxxx-xxxx">
+                required>
                 <br>
                 <br>
        assuntos: 
