--- a/aula0109.html
+++ b/aula0109.html
@@ -8,9 +8,9 @@
     <body>
         <h1>Login</h1>
         Informe seu e-mail e senha abaixo:
-       
-        <form>
-            <br>
+
+       <!-- classe utilizada no css -->
+        <form class="janela">
             e-mail:<input type="email" id="textemail"/>
             <br>
             senha:<input type="password" id="textsenha"/>
