--- a/aula0109.html
+++ b/aula0109.html
@@ -10,7 +10,7 @@
         Informe seu e-mail e senha abaixo:
 
        <!-- classe utilizada no css -->
-        <form class="janela">
+        <form class="box">
             e-mail:<input type="email" id="textemail"/>
             <br>
             senha:<input type="password" id="textsenha"/>
