--- a/aula1509.html
+++ b/aula1509.html
@@ -7,6 +7,7 @@
     <body>
       <div class="container">
         <h1> Teste de bootstrap</h1>
+
         <br>
         Tipos de buttons:
 
@@ -14,7 +15,7 @@
     <br>
 
     <!-- tipos de botao -->
-        <button class="btn btn-primary" >Enviar</button>
+        <button class="btn btn-dark" >Enviar</button>
         <button class="btn btn-outline-danger" >Excluir</button>
 
         <button class="btn btn-primary">
@@ -24,9 +25,9 @@
 
           <!-- grupos de botão -->
           <div class="btn-group">
-            <button type="button" class="btn btn-primary">Apple</button>
-            <button type="button" class="btn btn-primary">Samsung</button>
-            <button type="button" class="btn btn-primary">Sony</button>
+            <button type="button" class="btn btn-warning">Apple</button>
+            <button type="button" class="btn btn-success">Samsung</button>
+            <button type="button" class="btn btn-info">Sony</button>
           </div>
       </div>
        </br>
@@ -97,3 +98,5 @@
           </tbody>
         </table>
       </div>
+
+      </html>
