--- a/aula2209.html
+++ b/aula2209.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Javascript</title>
+        <script lang="javascript" src="pw07.js"> </script>
     </head>
     <body>
         <h1> Javascript</h1>
@@ -15,7 +16,8 @@
         </form>
     </body>
 </html>
-<script lang="javascript">
+
+<!-- <script lang="javascript">
 
     function media (){
 //converte para float (parseFloat)
@@ -27,4 +29,4 @@
     res.value = c;
     }
   
-</script>
+</script> -->
