--- a/aula2909.html
+++ b/aula2909.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+        <link rel="stylesheet" href="estilo7.css"/>
         <script lang="javascript" src="pw08.js"></script>
     </head>
     <body>
@@ -10,6 +11,8 @@
         senha:<input type="password" id="senha" /><br/>
         telefone:<input type="text" id="telefone" /><br/>
         mensagem:<textarea id="msg"></textarea><br/>
+        <div id="erros" class="erro"> </div>
+
         <button type="button" onclick="validar();">
             Enviar
         </button>        
